--- a/src/main/java/components/Menu.form
+++ b/src/main/java/components/Menu.form
@@ -69,15 +69,16 @@
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Segoe UI" size="18" style="1"/>
+              <Font name="SansSerif" size="18" style="1"/>
             </Property>
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="ff" green="ff" red="ff" type="rgb"/>
+              <Color blue="33" green="33" red="33" type="rgb"/>
             </Property>
+            <Property name="horizontalAlignment" type="int" value="0"/>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/icons/logo.png"/>
+              <Image iconType="3" name="/icons/logo_48.png"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="APPLICATION"/>
+            <Property name="text" type="java.lang.String" value="Application"/>
           </Properties>
         </Component>
       </SubComponents>
